log
Thu 09 May 2024 10:39:02 PM UTC: 
 tests:  1|8
total_score: 0/70
2fe0efd
Thu 09 May 2024 10:52:53 PM UTC: 
 treemap.c | 47 ++++++++++++++++++++++++++++++++---------------
 1 file changed, 32 insertions(+), 15 deletions(-)
In file included from test.c:4:
treemap.c:73:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
   73 | {
      | ^
Compilation failed
c02333b
Thu 09 May 2024 10:53:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
52c9467
Thu 09 May 2024 10:58:28 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:22: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   96 |             else if (lower_than(node->pair->key,key))
      |                      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7d3ec65
Thu 09 May 2024 10:59:44 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
b058d6c
Thu 09 May 2024 11:00:09 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
b7526f1
Thu 09 May 2024 11:33:06 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 5/70
788a58f
Thu 09 May 2024 11:34:23 PM UTC: 
 tests:  8|7
total_score: 5/70
693f9e3
Thu 09 May 2024 11:44:16 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
ed70e89
Thu 09 May 2024 11:50:46 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:15: error: unused variable ‘node’ [-Werror=unused-variable]
   64 |     TreeNode *node = tree->root;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
372c840
Thu 09 May 2024 11:50:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
e45e6ce
Thu 09 May 2024 11:55:41 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:15: error: unused variable ‘node’ [-Werror=unused-variable]
   64 |     TreeNode *node = tree->root;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
68536bd
Thu 09 May 2024 11:55:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
c87fd57
Fri 10 May 2024 12:00:17 AM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
 tests:  12|6
total_score: 15/70
0486ca8
Fri 10 May 2024 12:01:23 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
351412b
Fri 10 May 2024 12:02:04 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
2854137
Fri 10 May 2024 12:03:02 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
d2c578f
Fri 10 May 2024 12:03:32 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
92c4784
Fri 10 May 2024 12:04:27 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
47adc09
Fri 10 May 2024 12:07:36 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:107:1: error: control reaches end of non-void function [-Werror=return-type]
  107 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1f476ed
Fri 10 May 2024 12:07:55 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
01feea9
Fri 10 May 2024 12:08:45 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  13|5
total_score: 25/70
215fc84
Fri 10 May 2024 12:09:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:106:1: error: control reaches end of non-void function [-Werror=return-type]
  106 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d510bb
Fri 10 May 2024 12:09:39 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fd12a27
Fri 10 May 2024 12:10:09 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
ae17c42
Fri 10 May 2024 12:31:48 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
47a4bb9
Fri 10 May 2024 12:34:52 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|4
total_score: 30/70
8121d40
Fri 10 May 2024 12:38:35 AM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++----
 1 file changed, 24 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:145:25: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
  145 |     else if (node->left != NULL & node->right != NULL)
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
84d11f9
Fri 10 May 2024 12:38:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
61007e1
Fri 10 May 2024 12:41:25 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
40d95dc
Fri 10 May 2024 12:45:26 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
8df57e9
Fri 10 May 2024 12:46:16 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
330d77f
Fri 10 May 2024 12:49:27 AM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
fb8e96b
Fri 10 May 2024 12:53:48 AM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:215:1: error: control reaches end of non-void function [-Werror=return-type]
  215 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e43f0bd
Fri 10 May 2024 12:54:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
ceae037
Fri 10 May 2024 12:55:50 AM UTC: 
 treemap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  20|2
total_score: 45/70
25fb3d0
Fri 10 May 2024 12:57:13 AM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
4f988ec
Fri 10 May 2024 12:59:29 AM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  21|2
total_score: 50/70
a93894d
Fri 10 May 2024 12:59:43 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
5eba5f6
